--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,64 @@
-name: MLOps CI Pipeline
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-    - name: Run Training Pipeline
-      run: |
-        python pipeline.py
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install streamlit joblib numpy pandas scikit-learn evidently prefect pytest
+          fi
 
-    - name: Run Streamlit App Test (Optional)
-      run: |
-        python -m py_compile app.py
+      - name: Lint (optional failure)
+        run: |
+          pip install flake8
+          flake8 || true
+
+      - name: Run pipeline (generate model & report)
+        env:
+          TRAINING_DATA_PATH: data/final.csv
+          PRODUCTION_DATA_PATH: data/production.csv
+        run: |
+          python -u pipeline.py
+
+      - name: Run tests (if any)
+        run: |
+          if [ -d tests ] || ls test* 1>/dev/null 2>&1; then
+            pytest -q
+          else
+            echo "No tests found, skipping pytest."
+          fi
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ml-artifacts
+          path: |
+            artifacts/
+            reports/
