--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,25 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
+      # --------------------------------------------------
+      # 1️⃣ Checkout repository
+      # --------------------------------------------------
       - name: Checkout
         uses: actions/checkout@v4
 
+      # --------------------------------------------------
+      # 2️⃣ Setup Python
+      # --------------------------------------------------
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
+      # --------------------------------------------------
+      # 3️⃣ Cache pip
+      # --------------------------------------------------
       - name: Cache pip
         uses: actions/cache@v4
         with:
@@ -26,6 +36,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
+      # --------------------------------------------------
+      # 4️⃣ Install dependencies + DVC
+      # --------------------------------------------------
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -34,19 +47,35 @@ jobs:
           else
             pip install streamlit joblib numpy pandas scikit-learn evidently prefect pytest
           fi
+          pip install dvc
 
+      # --------------------------------------------------
+      # 5️⃣ Pull data using DVC (🔥 REQUIRED)
+      # --------------------------------------------------
+      - name: Pull data with DVC
+        run: dvc pull
+
+      # --------------------------------------------------
+      # 6️⃣ Lint (optional)
+      # --------------------------------------------------
       - name: Lint (optional failure)
         run: |
           pip install flake8
           flake8 || true
 
+      # --------------------------------------------------
+      # 7️⃣ Run Prefect pipeline
+      # --------------------------------------------------
       - name: Run pipeline (generate model & report)
         env:
           TRAINING_DATA_PATH: data/final.csv
-          PRODUCTION_DATA_PATH: data/production.csv
+          PRODUCTION_DATA_PATH: data/production_new.csv
         run: |
           python -u pipeline.py
 
+      # --------------------------------------------------
+      # 8️⃣ Run tests (optional)
+      # --------------------------------------------------
       - name: Run tests (if any)
         run: |
           if [ -d tests ] || ls test* 1>/dev/null 2>&1; then
@@ -55,6 +84,9 @@ jobs:
             echo "No tests found, skipping pytest."
           fi
 
+      # --------------------------------------------------
+      # 9️⃣ Upload artifacts (model + Evidently report)
+      # --------------------------------------------------
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
