Configure DVC remote

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = localstorage
+    remote = storage
 ['remote "localstorage"']
     url = D:\dvc_storage
+['remote "storage"']
+    url = ../dvc_storage
