--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # --------------------------------------------------
       # 1️⃣ Checkout repository
-      # --------------------------------------------------
       - name: Checkout
         uses: actions/checkout@v4
 
-      # --------------------------------------------------
       # 2️⃣ Setup Python
-      # --------------------------------------------------
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.10"
 
-      # --------------------------------------------------
       # 3️⃣ Cache pip
-      # --------------------------------------------------
       - name: Cache pip
         uses: actions/cache@v4
         with:
@@ -36,9 +30,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # --------------------------------------------------
       # 4️⃣ Install dependencies + DVC
-      # --------------------------------------------------
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -49,18 +41,18 @@ jobs:
           fi
           pip install dvc
 
+      # 5️⃣ Pull data using DVC (CRITICAL)
+      - name: Pull data with DVC
+        run: |
+          dvc pull
 
-      # --------------------------------------------------
       # 6️⃣ Lint (optional)
-      # --------------------------------------------------
       - name: Lint (optional failure)
         run: |
           pip install flake8
           flake8 || true
 
-      # --------------------------------------------------
       # 7️⃣ Run Prefect pipeline
-      # --------------------------------------------------
       - name: Run pipeline (generate model & report)
         env:
           TRAINING_DATA_PATH: data/final.csv
@@ -68,9 +60,7 @@ jobs:
         run: |
           python -u pipeline.py
 
-      # --------------------------------------------------
       # 8️⃣ Run tests (optional)
-      # --------------------------------------------------
       - name: Run tests (if any)
         run: |
           if [ -d tests ] || ls test* 1>/dev/null 2>&1; then
@@ -79,9 +69,7 @@ jobs:
             echo "No tests found, skipping pytest."
           fi
 
-      # --------------------------------------------------
-      # 9️⃣ Upload artifacts (model + Evidently report)
-      # --------------------------------------------------
+      # 9️⃣ Upload artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
